# arre-life-roulette

./: README.md
arre-life-roulette-godot/: ItemSelectionButton.tscn  Main.tscn  SelectionButton.tscn  backend.gdextension  icon.svg.import  project.godot
arre-life-roulette-godot/Icons/: delete.png.import
arre-life-roulette-godot/Themes/: Element.tres  (+2 more)
arre-life-roulette-rust/: .gitignore  Cargo.toml
arre-life-roulette-rust/logger_macro/: Cargo.toml
arre-life-roulette-rust/logger_macro/src/: lib.rs
arre-life-roulette-rust/src/: db.rs  db_init.rs  errors.rs  item.rs  item_details.rs  item_stats.rs  item_tag.rs  lib.rs  list.rs  tag.rs  test_fixtures.rs  utils.rs
arre-life-roulette-rust/src/godot_classes/: element_card.rs  globals.rs  item_button.rs  mod.rs  resources.rs  selection_button.rs  sliding_button.rs  tab_view_selector.rs  tag_card.rs  utils.rs  view_item_add.rs  view_item_modify.rs  view_item_stats.rs  view_items.rs  view_list_modify.rs  view_lists.rs  view_lists_modify.rs  view_logs.rs  view_roll.rs
arre-life-roulette-rust/src/godot_classes/containers/: cards_flow_container.rs  mod.rs
arre-life-roulette-rust/src/godot_classes/singletons/: buses.rs  globals.rs  logger.rs  mod.rs  signals.rs
arre-life-roulette-rust/src/godot_classes/views/: mod.rs  view_item_modify.rs  view_item_stats.rs  view_items.rs  view_list_modify.rs  view_lists.rs  view_logs.rs  view_roll.rs  view_tags.rs
arre-life-roulette-rust/src/godot_classes/views/roll/: mod.rs  subview_rolling.rs  subview_selection.rs  subview_work_assigned.rs  subview_work_finished.rs  view_roll.rs
(+13 files in other folders)
