[package]
name = "arre-life-roulette-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
thiserror = "1.0.40"

[dev-dependencies]
rstest = "0.17.0"
serial_test = "2.0.0"