[package]
name = "arre-life-roulette-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bus = "2.4.0"
chrono = "0.4.26"
godot = { git = "https://github.com/godot-rust/gdextension", branch = "master" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
thiserror = "1.0.41"

[dev-dependencies]
rstest = "0.18.1"